--- a/css/main.css
+++ b/css/main.css
@@ -39,16 +39,16 @@ ul li a i {
     transition: all 0.2s ease-in-out;
 }
 .fa-facebook {
-    background:#3b5998
+    background:#3b5998;
 } 
 .fa-linkedin {
-    background:#007bb6
+    background:#007bb6;
 }
 .fa-twitter {
-    background:#00aced
+    background:#00aced;
 }
 .google-plus {
-    background:#dd4b39
+    background:#dd4b39;
 }
 ul li a i:hover {
     opacity: .7;
@@ -64,4 +64,8 @@ ul li a i:hover {
   bottom: 0;
   right: 0;
   min-height: 70px;
+}
+
+h2{
+  text-align: center;
 }
