--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,7 @@
 
-
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
 
 .row.no-gutter {
   margin-left: 0;
@@ -16,17 +14,17 @@
   padding-left: 0;
 }
 
-ul {
+ul.socialicons {
     overflow: auto;
     display: inline-flex;
 }
  
-ul li {
+ul.socialicons li {
     list-style-type: none;
     float: left;
 }
  
-ul li a i {
+ul.socialicons li a i {
     background: #dd4b39;
     color: #fff;
     width: 40px;
@@ -50,7 +48,7 @@ ul li a i {
 .google-plus {
     background:#dd4b39;
 }
-ul li a i:hover {
+ul.socialicons li a i:hover {
     opacity: .7;
 }
 
@@ -68,4 +66,8 @@ ul li a i:hover {
 
 h2{
   text-align: center;
+}
+
+@media only screen and (max-width: 500px) {
+
 }
