--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@
 ul.socialicons {
     overflow: auto;
     display: inline-flex;
+    -webkit-padding-start: 0px;
 }
  
 ul.socialicons li {
@@ -24,7 +25,7 @@ ul.socialicons li {
     float: left;
 }
  
-ul.socialicons li a i {
+ul li a i {
     background: #dd4b39;
     color: #fff;
     width: 40px;
