--- a/css/main.css
+++ b/css/main.css
@@ -46,8 +46,11 @@ ul li a i {
 .fa-twitter {
     background:#00aced;
 }
-.google-plus {
+.fa-google-plus {
     background:#dd4b39;
+}
+.fa-github{
+  background: #222;
 }
 ul.socialicons li a i:hover {
     opacity: .7;
