--- a/css/main.css
+++ b/css/main.css
@@ -25,16 +25,16 @@ ul.socialicons li {
     float: left;
 }
  
-ul li a i {
-    background: #dd4b39;
+ul.socialicons li a i, .w3-sidenav a i, span i{
+    /*background: #dd4b39;*/
     color: #fff;
     width: 40px;
     height: 40px;
     border-radius: 20px;
-    font-size: 25px;
+    font-size: 20px;
     text-align: center;
     margin-right: 10px;
-    padding-top: 15%;
+    padding-top: 22%;
     transition: all 0.2s ease-in-out;
 }
 .fa-facebook {
@@ -55,6 +55,9 @@ ul li a i {
 ul.socialicons li a i:hover {
     opacity: .7;
 }
+.fa-share-alt{
+  background:#dd4b39;
+} 
 
 .row.vdivide [class*='col-']:not(:last-child):after {
   background: #e0e0e0;
