Fixes responsivness issue, makes menu collapsible at medium break point, and temporarily removes pie chart

--- a/components/experienceandservices.html
+++ b/components/experienceandservices.html
@@ -5,8 +5,10 @@
                 <header class="w3-green">
                   <h3><i class="fa fa-briefcase" aria-hidden="true"></i> Work Experience</h3>
                 </header>
-                  <h5><a href="http://www.careertech.in/" target="_blank" style="text-decoration:none;"><i class="fa fa-building-o" aria-hidden="true"></i> CAREERTECH IT SOLUTIONS</a></h5>
-                  <h6><i class="fa fa-calendar" aria-hidden="true"></i> Feb 2016 - May 2016</h6>
+                  <h5><a href="http://www.careertech.in/" target="_blank" style="text-decoration:none;"><i class="fa fa-building-o" aria-hidden="true"></i> CAREERTECH IT SOLUTIONS</a></h5> 
+                  <h6 style="text-indent: 20px; font-size: .9em;"> -Mainly a Web Development / Designing Company</h6>
+                  <h6 class="expcal"><i class="fa fa-calendar" aria-hidden="true"></i> Feb 2016 - May 2016</h6>
+                  <h5>SOFTWARE ENGINEER</h5>
                   <ul ng-repeat="experience in experiences">
                       <li>{{ experience }}</li>
                   </ul>
@@ -18,7 +20,7 @@
                     <ul ng-repeat="service in services">
                       <li>{{service}}</li>
                     </ul>
-                    <span class="w3-tag w3-right">More Services later</span>
+                    <span class="w3-tag w3-right w3-indigo">More Services later</span>
               </div>
             </div><!-- row -->
           </div><!-- card -->
