--- a/components/siteheader.html
+++ b/components/siteheader.html
@@ -8,12 +8,12 @@
                 <div class="w3-margin-top">
                   <figure>Place here "Hello and Welcome" bubble</figure>
                   <p class="mg-40">
-                    I'M NAVNEET PRAKASH <br/>
+                    I'M <strong>NAVNEET PRAKASH</strong> <br/>
                     SOFTWARE ENGINEER<br/>
-                    Age: 24<br/>
-                    <i class="fa fa-map-marker w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small">Address:</span> WA-112, Gali No. 16, Shakarpur, Delhi-92, New Delhi<br/>
-                    <i class="fa fa-mobile w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small" >Phone:</span> +91-9527936489<br/>
-                    <i class="fa fa-envelope w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small">Email:</span> hello_navneet@hotmail.com
+                    <strong>Age:</strong> 24<br/>
+                    <strong> <i class="fa fa-map-marker w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small"> Address:</strong></span> WA-112, Gali No. 16, Shakarpur, Delhi-92, New Delhi<br/>
+                    <strong><i class="fa fa-mobile w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small" > Phone:</strong></span> +91-9527936489<br/>
+                    <strong> <i class="fa fa-envelope w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small"> Email:</strong></span> hello_navneet@hotmail.com
                   </p>
                   <div class="w3-row">
                     <div class="w3-col l10 mg-40">
