--- a/components/contactus.html
+++ b/components/contactus.html
@@ -1,6 +1,7 @@
 <section class="w3-container" id="contact">
-        <h3> Contact Me</h3>
+        
         <div class="w3-card-4">
+        <h3> <i class="fa fa-phone" aria-hidden="true"></i> CONTACT ME</h3>
           <div class="w3-row-padding">
             <div class="w3-col m6" id="map">
               <header class="w3-green">
@@ -8,12 +9,12 @@
               </header>
                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3501.969717148491!2d77.27522831489338!3d28.63066969091647!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfcad18e74289%3A0x34d861fdb781a88e!2sLaxmi+Nagar+Metro+Station!5e0!3m2!1sen!2sin!4v1471626444715" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
               <footer class="w3-container w3-green">
-                <h5><i class="fa fa-map-marker" aria-hidden="true"></i> View on Map</h5>
+                <h5><i class="fa fa-map-marker" aria-hidden="true"></i> View on Map <span class="w3-tag w3-orange w3-small">disabled</span></h5>
               </footer>
             </div><!-- col -->
              <div class="w3-col m6">
               <header class="w3-green">
-                <h3>Write to me <span class="w3-tag w3-orange w3-small">Coming soon!</span></p> </h3>
+                <h3><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Write to me <span class="w3-tag w3-orange w3-small">Coming soon!</span></p> </h3>
               </header>
 
                 <form action="#">
