Adds Google pie chart of skiils in a card model

--- a/components/educationandtraining.html
+++ b/components/educationandtraining.html
@@ -10,7 +10,11 @@
                             <th>Degree</th>
                             <th>University</th>
                             <!-- <th>Institute</th> -->
-                            <th>YOP</th>
+                            <th>
+                              <span class="w3-tooltip">YOP
+                                <span class="w3-text w3-tag w3-blue" style="position:absolute;left:0;top:18px">Year of Passing</span>
+                              </span>
+                            </th>
                             <th>Percentage</th>
                           </tr>
                         </thead>
@@ -42,7 +46,7 @@
                     </tr>
                   </tbody>
                 </table>
-                <span class="w3-tag w3-orange w3-right" style="margin-bottom:5px;">Sorry. Certificate of last course not available. </span>
+                <span class="w3-tag w3-blue w3-right w3-small" style="margin-bottom:5px;">Sorry. Certificate of last course not available. </span>
             </div>
           </div><!-- col -->
         </div><!-- row -->
