--- a/components/siteheader.html
+++ b/components/siteheader.html
@@ -1,8 +1,8 @@
 <section class="w3-container">
           <div class="w3-card-4">
-            <div class="w3-row">
+            <div class="w3-row" id="siteheader">
               <div class="w3-col w3-card m2">
-                <img src="img/dp.jpg" style="width:100%;">
+                <img src="img/dp.jpg" alt="Display Picture" style="width:100%;">
               </div>
               <div class="w3-col m10">
                 <div class="w3-margin-top">
