--- a/components/skills.html
+++ b/components/skills.html
@@ -28,8 +28,22 @@
                     </div>
                   </div> <br/>
                 </div> <!-- repeater -->
-
               </div><!-- col -->
+              <button onclick="document.getElementById('id01').style.display='block'" class="w3-btn">CLICK HERE FOR PIE CHART VIEW OF SKILLS</button>
             </div><!-- row -->
           </div><!-- card -->
       </section>
+
+              <div id="id01" class="w3-modal">
+                <div class="w3-modal-content w3-card-8 w3-animate-top">
+                  <header class="w3-container w3-green">
+                    <span onclick="document.getElementById('id01').style.display='none'" class="w3-closebtn">&times;</span>
+                      <h3 class="">&darr; Level of skills</h3>
+                  </header><!-- modal container -->
+                  <div class="container">
+                      <figure id="skills_chart">
+                      </figure>
+                      <figcaption class="w3-tag w3-orange w3-padding w3-margin-bottom">Can you please help me make this pie chart responsive?</figcaption>
+                  </div><!-- modal -->
+                </div>
+              </div><!-- mo
