--- a/components/navbar.html
+++ b/components/navbar.html
@@ -17,7 +17,7 @@
         <div class="w3-dropdown-content w3-green w3-card-8">
           <a href="#">Portfolio</a>
           <a href="#">Online Shopping</a>
-          <a href="#">Classified Ads</a>
+          <a href="http://techraiders.github.io/ngClassifieds/" target="_blank">Classified Ads</a>
         </div>
     </li>
     <li class="w3-hide-small w3-hide-medium"><a class="w3-padding-16" href="#">Contact</a></li>
@@ -37,7 +37,7 @@
           <div class="w3-dropdown-content w3-green w3-card-8">
             <a href="#">Portfolio</a>
             <a href="#">Online Shopping</a>
-            <a href="#">Classified Ads</a>
+            <a href="http://techraiders.github.io/ngClassifieds/" target="_blank">Classified Ads</a>
           </div>
         </li>
         <li><a class="w3-padding-16" href="#">Contact</a></li>
