--- a/components/skills.html
+++ b/components/skills.html
@@ -1,5 +1,5 @@
 <section class="w3-container" id="skills" ng-controller="skillsCtrl">
-         <header class=""><h3>Skills</h3></header>
+         <h3>SKILLS</h3>
           <div class="w3-card-4 w3-padding-xlarge">
             <div class="w3-row-padding">
               <div class="w3-col s12 m4">
