--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,9 @@ ul.socialicons li a i:hover {
 .fa-share-alt{
   background:#dd4b39;
 } 
+.fa-envelope-o {
+  background-color:#dd4b39;
+}
 
 
 footer{
