implements ng-copy, ng-disable, and

--- a/components/siteheader.html
+++ b/components/siteheader.html
@@ -13,7 +13,7 @@
                     <strong>Age:</strong> 24<br/>
                     <strong> <i class="fa fa-map-marker w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small"> Address:</strong></span> WA-112, Gali No. 16, Shakarpur, Delhi-92, New Delhi<br/>
                     <strong><i class="fa fa-mobile w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small" > Phone:</strong></span> +91-9527936489<br/>
-                    <strong> <i class="fa fa-envelope w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small"> Email:</strong></span> hello_navneet@hotmail.com
+                    <strong> <i class="fa fa-envelope w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small"> Email:</strong></span> <span ng-copy="Message=true"> hello_navneet@hotmail.com</span> <span class="w3-tag w3-orange w3-margin-left" ng-show="Message"><em><strong>Email Copied</strong></em></span>
                   </p>
                   <div class="w3-row">
                     <div class="w3-col l10 mg-40">
@@ -32,3 +32,7 @@
             </div><!-- dp row -->
           </div><!-- card -->
         </section>
+
+        <script type="text/javascript">
+        
+        </script>
