--- a/components/contactus.html
+++ b/components/contactus.html
@@ -18,28 +18,41 @@
 
                 <form action="#">
                 
-                <p>
-                <label class="w3-label w3-text-green"><b>To</b></label>
-                <input class="w3-input w3-border w3-sand" name="receiver" type="text" value="hello_navneet@hotmail.com" readonly="true"></p>
-                
-                <p>
-                <label class="w3-label w3-text-green"><b>From</b></label>
-                <input class="w3-input w3-border w3-sand" name="sender" type="text" placeholder="your name" required></p>
+                  <p>
+                    <label class="w3-label w3-text-green"><b>To</b></label> <span ng-copy="Message=true">
+                    <input class="w3-input w3-border w3-sand" name="receiver" type="text" value="hello_navneet@hotmail.com" readonly="true"></span>
+                    <span class="w3-tag w3-orange w3-margin-left" ng-show="Message"><em><strong>Email Copied</strong></em></span>
+                  </p>
+                  
+                  <p>
+                    <label class="w3-label w3-text-green"><b>From</b></label>
+                    <input class="w3-input w3-border w3-sand" name="sender" type="text" placeholder="your name" required ng-model="name">
+                  </p>
 
-                <p>
-                <label class="w3-label w3-text-green"><b>Email</b></label>
-                <input class="w3-input w3-border w3-sand" name="email" type="email" placeholder="your email" required></p>
+                  <p>
+                    <label class="w3-label w3-text-green"><b>Email</b></label>
+                    <input class="w3-input w3-border w3-sand" name="email" type="email" placeholder="your email" required ng-model="email" ng-disabled="!name">
+                  </p>
 
-                <p>
-                <label class="w3-label w3-text-green"><b>Website</b></label>
-                <input class="w3-input w3-border w3-sand" name="website" type="url" placeholder="your website (optional)"></p>
-                
-                <p>
-                <textarea class="w3-sand" rows="4" cols="50" maxlength="50" placeholder="your message" style="width:100%;padding: 12px 20px;" required></textarea> </p>
-                <p>
-                <button class="w3-btn w3-green">Submit</button></p>
-
+                  <p>
+                    <label class="w3-label w3-text-green"><b>Website</b></label>
+                    <input class="w3-input w3-border w3-sand" name="website" type="url" placeholder="your website (optional)" ng-disabled="!name">
+                  </p>
+                  
+                  <p>
+                    <textarea class="w3-sand" rows="4" cols="70" maxlength="500" placeholder="your message" style="width:100%;padding: 12px 20px;" required ng-init="count=500" ng-keydown="count=count-1" ng-model="message" ng-disabled="!email"></textarea>
+                    <span class="w3-tag w3-right w3-light-grey">{{count}} character remaining..</span>
+                  </p>
+                  
+                  <p>
+                    <button class="w3-btn w3-green" ng-disabled="!message">Submit</button>
+                  </p>
                 </form>
+                <div class="w3-right">
+                  <span class="w3-tag">You Spent: </span>
+                  <span class="w3-tag" ng-controller="timeCtrl">{{minutes}} m</span>
+                <span class="w3-tag" ng-controller="timeCtrl">{{seconds}} s</span>
+                </div>
             </div><!-- col -->
           </div><!-- row -->
         </div><!-- card -->
