--- a/components/sidenav.html
+++ b/components/sidenav.html
@@ -14,5 +14,5 @@
         <a href="#"><i class="fa fa-google-plus w3-xlarge" aria-hidden="true"></i></a>
         <a href="#"><i class="fa fa-envelope-o w3-xlarge" aria-hidden="true"></i></a>
         
-        <a href=""><i class="fa fa-thumbs-o-up w3-xlarge w3-indigo" aria-hidden="true"></i></a>
+        <!-- <a href=""><i class="fa fa-thumbs-o-up w3-xlarge w3-indigo" aria-hidden="true"></i></a> -->
       </nav>
