Implemetns speech bubble and adjusts columns take full width on medium size screens

--- a/components/contactus.html
+++ b/components/contactus.html
@@ -2,7 +2,7 @@
         <h3> <i class="fa fa-phone" aria-hidden="true"></i> CONTACT ME</h3>
         <div class="w3-card-4">
           <div class="w3-row-padding">
-            <div class="w3-col m6" id="map">
+            <div class="w3-col l6" id="map">
               <header class="w3-green">
                 <h3>Find Me on Map &darr;</h3>
               </header>
@@ -11,7 +11,7 @@
                 <h5><i class="fa fa-map-marker" aria-hidden="true"></i> View on Map <span class="w3-tag w3-orange w3-small">disabled</span></h5>
               </footer>
             </div><!-- col -->
-             <div class="w3-col m6">
+             <div class="w3-col l6">
               <header class="w3-green">
                 <h3><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Write to me <span class="w3-tag w3-orange w3-small">Coming soon!</span></p> </h3>
               </header>
@@ -55,5 +55,11 @@
                 </div>
             </div><!-- col -->
           </div><!-- row -->
+          
+          <div class="w3-row">
+            <div class="w3-col w3-center">
+              <a href="#" id="bottom">Go to top (disabled) </a>
+            </div>
+          </div>
         </div><!-- card -->
       </section>
