--- a/components/educationandtraining.html
+++ b/components/educationandtraining.html
@@ -2,7 +2,7 @@
         <h3><i class="fa fa-graduation-cap" aria-hidden="true"></i> EDUCATION AND TRAININGS</h3>
           <div class="w3-card-4">
             <div class="w3-row-padding">
-              <div class="w3-col m6" ng-controller="educationCtrl">
+              <div class="w3-col l6" ng-controller="educationCtrl">
                 <div class="w3-responsive">
                   <table class="w3-table w3-striped">
                         <thead>
@@ -30,7 +30,7 @@
                       </table>
                 </div>
             </div> <!-- col -->
-          <div class="w3-col m6" ng-controller="trainingsCtrl">
+          <div class="w3-col l6" ng-controller="trainingsCtrl">
             <div class="w3-responsive">
               <table class="w3-table w3-striped">
                   <thead>
