--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,6 +1,6 @@
 
 
-<div class="w3-top">
+<div class="w3-top" id="menubar">
   <ul class="w3-navbar w3-green w3-card-8">
     <li class="w3-hide-large w3-green w3-opennav w3-right">
       <a href="javascript:void(0);" onclick="myFunction()">☰</a>
