--- a/components/skills.html
+++ b/components/skills.html
@@ -2,7 +2,7 @@
          <h3>SKILLS</h3>
           <div class="w3-card-4 w3-padding-xlarge">
             <div class="w3-row-padding">
-              <div class="w3-col s12 m4">
+              <div class="w3-col s12 m6 l4">
                 <div ng-repeat="skill in skills.slice(0,6)">
                   <div class="w3-progress-container w3-card-2">
                     <div id="myBar" class="w3-progressbar w3-green" style="width:{{skill.status}}">
@@ -11,7 +11,7 @@
                   </div> <br/>
                 </div> <!-- repeater -->
               </div><!-- col -->
-              <div class="w3-col s12 m4">
+              <div class="w3-col s12 m6 l4">
                 <div ng-repeat="skill in skills.slice(7,14)">
                   <div class="w3-progress-container w3-card-2">
                     <div id="myBar" class="w3-progressbar w3-green" style="width:{{skill.status}}">
@@ -20,7 +20,7 @@
                   </div> <br/>
                 </div> <!-- repeater -->
               </div><!-- col -->
-              <div class="w3-col s12 m4">
+              <div class="w3-col s12 m6 l4">
                 <div ng-repeat="skill in skills.slice(15,20)">
                   <div class="w3-progress-container w3-card-2">
                     <div id="myBar" class="w3-progressbar w3-green" style="width:{{skill.status}}">
@@ -41,9 +41,9 @@
                         <h3 class="">&darr; Level of skills</h3>
                     </header><!-- modal container -->
                     <div class="w3-container">
-                        <figure id="skills_chart">
+                        <figure  id="skills_chart">
                         </figure>
-                        <figcaption class="w3-tag w3-orange w3-padding w3-margin-bottom">Can you please help me make this pie chart responsive?</figcaption>
+                          <figcaption class="w3-tag w3-orange w3-padding w3-margin-bottom">Can you please help me make this pie chart responsive?</figcaption>
                     </div><!-- chart container -->
                   </div><!-- modal content -->
                 </div><!-- modal -->     
