--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,6 @@ ul.socialicons li a i:hover {
   background-color:#dd4b39;
 }
 
-
 footer{
     text-align: center;
 }
@@ -76,3 +75,86 @@ td a {
 @media only screen and (max-width: 500px) {
 
 }
+
+p.speech {
+  position: relative;
+  width: 200px;
+  height: 40px;
+  text-align: center;
+  line-height: 40px;
+  background-color: #fff;
+
+/*  border: 4px solid #666;*/
+    border-top-color: rgb(102, 102, 102);
+    border-top-style: solid;
+    border-top-width: 0px;
+    border-right-color: rgb(102, 102, 102);
+    border-right-style: solid;
+    border-right-width: 0px;
+    border-bottom-color: rgb(102, 102, 102);
+    border-bottom-style: solid;
+    border-bottom-width: 0px;
+    border-left-color: rgb(102, 102, 102);
+    border-left-style: solid;
+    border-left-width: 0px;
+    border-image-source: initial;
+    border-image-slice: initial;
+    border-image-width: initial;
+    border-image-outset: initial;
+    border-image-repeat: initial;
+
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  
+  /*border-radius: 30px;*/
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+  
+  -webkit-box-shadow: 2px 2px 4px #888;
+  -moz-box-shadow: 2px 2px 4px #888;
+  box-shadow: 2px 2px 4px #888;
+
+  font-weight: bolder;
+}
+p.speech:before {
+  content: ' ';
+  position: absolute;
+  width: 0;
+  height: 0;
+  left: 30px;
+  top: 38px;
+  border: 13px solid;
+  /*border-color: #666 transparent transparent #666;*/
+  border-top-color: red;
+    border-right-color: red;
+    border-bottom-color: transparent;
+    border-left-color: transparent;
+  margin-left: 120px;
+}
+p.speech:after {
+  content: ' ';
+  position: absolute;
+  width: 0;
+  height: 0;
+  left: 30px;
+  top: 38px;
+  border: 13px solid;
+  /*border-color: #666 transparent transparent #666;*/
+  border-top-color: #4caf50;
+    border-right-color: #4caf50;
+    border-bottom-color: transparent;
+    border-left-color: transparent;
+  margin-left: 120px;
+}
+/*p.speech:after {
+  content: ' ';
+  position: absolute;
+  width: 0;
+  height: 0;
+  left: 38px;
+  top: 100px;
+  border: 15px solid;
+  border-color: #fff transparent transparent #fff;
+}*/
