--- a/components/experienceandservices.html
+++ b/components/experienceandservices.html
@@ -1,7 +1,7 @@
         <section class="w3-container">
           <div class="w3-card-4 w3-padding-xlarge">
             <div class="w3-row-padding">
-              <div class="w3-col m6" id="experience" ng-controller="experienceCtrl">
+              <div class="w3-col l6" id="experience" ng-controller="experienceCtrl">
                 <header class="w3-green">
                   <h3><i class="fa fa-briefcase" aria-hidden="true"></i> Work Experience</h3>
                 </header>
@@ -13,7 +13,7 @@
                       <li>{{ experience }}</li>
                   </ul>
               </div>
-              <div class="w3-col m6" id="services" ng-controller="servicesCtrl">
+              <div class="w3-col l6" id="services" ng-controller="servicesCtrl">
                 <header class="w3-green">
                   <h3><i class="fa fa-wrench" aria-hidden="true"></i> How can I serve you?</h3>
                 </header>
