--- a/components/siteheader.html
+++ b/components/siteheader.html
@@ -1,19 +1,24 @@
 <section class="w3-container">
           <div class="w3-card-4">
-            <div class="w3-row" id="siteheader">
-              <div class="w3-col w3-card m2">
-                <img src="img/dp.jpg" alt="Display Picture" style="width:100%;">
+            <div class="w3-row" id="siteHeader">
+              <div class="w3-col w3-card l2">
+                <img src="img/dp.jpg" alt="Display Picture" style="width:100%;height:100%">
               </div>
-              <div class="w3-col m10">
+              <div class="w3-col l10">
                 <div class="w3-margin-top">
-                  <figure>Place here "Hello and Welcome" bubble</figure>
+                  <p class="speech w3-green mg-40">Hello &amp; Welcome</p>
                   <p class="mg-40">
-                    I'M <strong>NAVNEET PRAKASH</strong> <br/>
-                    SOFTWARE ENGINEER<br/>
-                    <strong>Age:</strong> 24<br/>
-                    <strong> <i class="fa fa-map-marker w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small"> Address:</strong></span> WA-112, Gali No. 16, Shakarpur, Delhi-92, New Delhi<br/>
-                    <strong><i class="fa fa-mobile w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small" > Phone:</strong></span> +91-9527936489<br/>
-                    <strong> <i class="fa fa-envelope w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small"> Email:</strong></span> <span ng-copy="Message=true"> hello_navneet@hotmail.com</span> <span class="w3-tag w3-orange w3-margin-left" ng-show="Message"><em><strong>Email Copied</strong></em></span>
+                    <span style="font-size: x-large;">I'M
+                      <strong class="w3-text-green">NAVNEET PRAKASH</strong>
+                    </span> <br/>
+                      SOFTWARE ENGINEER <hr/>
+                    <strong class="mg-40">Age:</strong> 24
+                    <address class="mg-40">
+                      <strong> <i class="fa fa-map-marker w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small"> Address:</strong></span> WA-112, Gali No. 16, Shakarpur, Delhi-92, New Delhi
+                      <br/>
+                      <strong><i class="fa fa-mobile w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small" > Phone:</strong></span> +91-9527936489<br/>
+                      <strong> <i class="fa fa-envelope w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small"> Email:</strong></span> <span ng-copy="Message=true"> hello_navneet@hotmail.com</span> <span class="w3-tag w3-orange w3-margin-left" ng-show="Message"><em><strong>Email Copied</strong></em></span>
+                    </address>
                   </p>
                   <div class="w3-row">
                     <div class="w3-col l10 mg-40">
