Fixes responsivness issues in display picture

--- a/components/contactus.html
+++ b/components/contactus.html
@@ -45,7 +45,7 @@
                   </p>
                   
                   <p>
-                    <button class="w3-btn w3-green" ng-disabled="!message">Submit</button>
+                    <button class="w3-btn w3-green w3-hover-white" ng-disabled="!message">Submit</button>
                   </p>
                 </form>
                 <div class="w3-right">
