--- a/components/siteheader.html
+++ b/components/siteheader.html
@@ -1,10 +1,10 @@
 <section class="w3-container">
           <div class="w3-card-4">
             <div class="w3-row" id="siteHeader">
-              <div class="w3-col w3-card l2">
+              <div class="w3-col w3-card m4 l2" style="background-color:green;height:350px;">
                 <img src="img/dp.jpg" alt="Display Picture" style="width:100%;height:100%">
               </div>
-              <div class="w3-col l10">
+              <div class="w3-col m8 l10">
                 <div class="w3-margin-top">
                   <p class="speech w3-green mg-40">Hello &amp; Welcome</p>
                   <p class="mg-40">
