--- a/components/contactus.html
+++ b/components/contactus.html
@@ -49,7 +49,7 @@
                   </p>
                 </form>
                 <div class="w3-right">
-                  <span class="w3-tag">You Spent: </span>
+                  <span class="w3-tag">Thanks for your: </span>
                   <span class="w3-tag" ng-controller="timeCtrl">{{minutes}} m</span>
                 <span class="w3-tag" ng-controller="timeCtrl">{{seconds}} s</span>
                 </div>
