--- a/components/navbar.html
+++ b/components/navbar.html
@@ -20,6 +20,7 @@
           <a href="http://techraiders.github.io/ngClassifieds/" target="_blank">Classified Ads</a>
         </div>
     </li>
+    <li class="w3-hide-small w3-hide-medium"><a class="w3-padding-16" href="#">References</a></li>
     <li class="w3-hide-small w3-hide-medium"><a class="w3-padding-16" href="#">Contact</a></li>
     <li class="w3-hide-small w3-hide-medium w3-navitem w3-right"><input type="text" class="w3-input w3-border-0" placeholder="Search.. (disabled)"></li>
   </ul>
@@ -40,6 +41,7 @@
             <a href="http://techraiders.github.io/ngClassifieds/" target="_blank">Classified Ads</a>
           </div>
         </li>
+        <li class="w3-hide-small w3-hide-medium"><a class="w3-padding-16" href="#">References</a></li>
         <li><a class="w3-padding-16" href="#">Contact</a></li>
         <li class="w3-navitem"><input type="search" class="w3-input w3-border-0" placeholder="Search.. (disabled)"></li>
       </ul>
