--- a/components/siteheader.html
+++ b/components/siteheader.html
@@ -1,18 +1,22 @@
 <section class="w3-container">
           <div class="w3-card-4">
             <div class="w3-row" id="siteHeader">
-              <div class="w3-col w3-card m4 l2" style="background-color:green;height:350px;">
+              <div class="w3-col w3-card m4 l2" style="height:350px;">
                 <img src="img/dp.jpg" alt="Display Picture" style="width:100%;height:100%">
               </div>
               <div class="w3-col m8 l10">
                 <div class="w3-margin-top">
-                  <p class="speech w3-green mg-40">Hello &amp; Welcome</p>
+                  <p class="speech w3-green mg-40 w3-card-2" style="margin-left: 10px;">Hello &amp; Welcome</p>
                   <p class="mg-40">
                     <span style="font-size: x-large;">I'M
                       <strong class="w3-text-green">NAVNEET PRAKASH</strong>
                     </span> <br/>
                       SOFTWARE ENGINEER <hr/>
                     <strong class="mg-40">Age:</strong> 24
+
+      <!-- side nav that holds social sharing buttons -->
+      <aside ng-include="'components/sidenav.html'"></aside>
+                    
                     <address class="mg-40">
                       <strong> <i class="fa fa-map-marker w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small"> Address:</strong></span> WA-112, Gali No. 16, Shakarpur, Delhi-92, New Delhi
                       <br/>
