implements ng-options, ng-switch and ng-switch-when to facilitate select dropdown to avail choice of view to visitor

--- a/css/main.css
+++ b/css/main.css
@@ -148,3 +148,8 @@ p.speech:after {
     border-left-color: transparent;
   margin-left: 120px;
 }
+
+th {
+  text-transform: uppercase;
+  text-align: center;
+}
