--- a/components/skills.html
+++ b/components/skills.html
@@ -1,17 +1,23 @@
 <section class="w3-container" id="skills" ng-controller="skillsCtrl">
-         <h3>SKILLS</h3>
-          <div class="w3-card-4 w3-padding-xlarge">
-            <div class="w3-row-padding">
-              <div class="w3-col s12 m6 l4">
+    <h3>SKILLS</h3><br/>
+  <div class="w3-card-4 w3-padding-medium">
+      <p class="w3-center" style="font-size: 1.2em;font-size: medium;font-variant: small-caps;">SHOW ME YOUR SKILLS IN:
+        <select class="w3-select w3-margin w3-padding" name="option" ng-model="selectedDiv" ng-options="item for item in div" style="width:20%;"></select>
+        </p><br/>
+
+          <div ng-switch="selectedDiv">
+            <div class="w3-row-padding" ng-switch-when="Progress Bars">                  
+              <div class="w3-col s12 m4 l4 w3-animate-right">
                 <div ng-repeat="skill in skills.slice(0,6)">
-                  <div class="w3-progress-container w3-card-2">
-                    <div id="myBar" class="w3-progressbar w3-green" style="width:{{skill.status}}">
-                      <div class="w3-center w3-text-white">{{skill.name}}</div>
-                    </div>
-                  </div> <br/>
+                    <div class="w3-progress-container w3-card-2">
+                      <div id="myBar" class="w3-progressbar w3-green" style="width:{{skill.status}}">
+                          <div class="w3-center w3-text-white">{{skill.name}}</div>
+                      </div><!-- progress bar -->
+                    </div> <!-- progress  container --> <br/>
                 </div> <!-- repeater -->
               </div><!-- col -->
-              <div class="w3-col s12 m6 l4">
+
+              <div class="w3-col s12 m4 l4 w3-animate-bottom">
                 <div ng-repeat="skill in skills.slice(7,13)">
                   <div class="w3-progress-container w3-card-2">
                     <div id="myBar" class="w3-progressbar w3-green" style="width:{{skill.status}}">
@@ -20,27 +26,57 @@
                   </div> <br/>
                 </div> <!-- repeater -->
               </div><!-- col -->
-              <div class="w3-col s12 m6 l4">
+
+              <div class="w3-col s12 m4 l4 w3-animate-left">
                 <div ng-repeat="skill in skills.slice(14,21)">
                   <div class="w3-progress-container w3-card-2">
                     <div id="myBar" class="w3-progressbar w3-green" style="width:{{skill.status}}">
                       <div class="w3-center w3-text-white">{{skill.name}}</div>
-                    </div>
-                  </div> <br/>
+                    </div><!-- progress bar -->
+                  </div><!-- progress container --> <br/>
                 </div> <!-- repeater -->
               </div><!-- col -->
+              
               <button onclick="document.getElementById('id01').style.display='block'" class="w3-btn">CLICK HERE FOR PIE CHART VIEW OF SKILLS</button><br/>
+            </div><!-- ng-swith-when row -->
+
+            <div class="w3-row">
+              <div class="w3-col">
+                <table class="w3-table-all w3-striped w3-animate-right w3-hoverable w3-responsive" ng-switch-when="Table" id="skillsTable">
+                  <thead>
+                    <tr class="w3-green">
+                      <th>Skill Name</th>
+                      <th>Version</th>
+                      <th colspan="2">Last Used</th>
+                      <th>
+                        <span class="w3-tooltip">EIM
+                          <span class="w3-text w3-tag w3-blue" style="position:absolute;left:0;top:18px">Experience in Months</span>
+                        </span>
+                      </th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr ng-repeat="skill in skills">
+                      <td>{{skill.name}}</td>
+                      <td>{{skill.version}}</td>
+                      <td> {{skill.last_used_month}} </td> <td> {{skill.last_used_year}} </td>
+                      <td> {{skill.experience}} </td>
+                    </tr>
+                  </tbody>
+                </table><!-- ng-switch-when -->
+              </div><!-- col -->
             </div><!-- row -->
+          </div><!-- ng-switch -->
 
             <div class="w3-row">
               <div class="w3-col"> 
                 <div id="id01" class="w3-modal">
-                  <div class="w3-modal-content w3-card-8 w3-animate-top">
-                    <header class="w3-container w3-green">
+                  <div class="w3-modal-content w3-card-8 w3-animate-top" style="overflow:hidden;">
+                    <header class="w3-green">
                       <span onclick="document.getElementById('id01').style.display='none'" class="w3-closebtn">&times;</span>
                         <h3 class="">&darr; Level of skills</h3>
                     </header><!-- modal container -->
-                    <div class="w3-container">
+                    <div>
                         <figure  id="skills_chart">
                         </figure>
                           <figcaption class="w3-tag w3-orange w3-padding w3-margin-bottom">Can you please help me make this pie chart responsive?</figcaption>
@@ -49,5 +85,5 @@
                 </div><!-- modal -->     
               </div><!-- col -->
             </div><!-- row -->
-          </div><!-- card -->
-      </section>
+  </div><!-- card -->
+</section>
