Adds download resume feature in the sidenav

--- a/components/experienceandservices.html
+++ b/components/experienceandservices.html
@@ -1,5 +1,5 @@
         <section class="w3-container">
-          <div class="w3-card-4 w3-padding-xlarge">
+          <div class="w3-card-4 w3-padding">
             <div class="w3-row-padding">
               <div class="w3-col l6" id="experience" ng-controller="experienceCtrl">
                 <header class="w3-green">
