--- a/components/sidenav.html
+++ b/components/sidenav.html
@@ -1,7 +1,10 @@
 <!-- Share button at the right that opens sidenav of sharing icons -->
-      <nav class="w3-sidenav w3-card-2 w3-hide-small w3-animate-right" style="width:auto;height:auto;right:0;" id="shareicon" ng-click="showsocialshareiconsholder=true" ng-show="!showsocialshareiconsholder">
-        <a href="">
+      <nav class="w3-sidenav w3-card-2 w3-hide-small w3-animate-right" style="width:auto;height:auto;right:0;" id="shareicon" ng-show="!showsocialshareiconsholder">
+        <a href=""  ng-click="showsocialshareiconsholder=true">
           <i class="fa fa-share-alt" aria-hidden="true"></i>
+        </a>
+        <a href="documents/resume.pdf" download="UI_DEVELOPER_RESUME.pdf">
+          <i class="fa fa-download" aria-hidden="true"></i>
         </a>
       </nav>
 
