--- a/components/siteheader.html
+++ b/components/siteheader.html
@@ -1,47 +1,43 @@
 <section class="w3-container">
-          <div class="w3-card-4">
-            <div class="w3-row" id="siteHeader">
-              <div class="w3-col w3-card m4 l2" style="height:350px;">
-                <img src="img/dp.jpg" alt="Display Picture" style="width:100%;height:100%">
-              </div>
-              <div class="w3-col m8 l10">
-                <div class="w3-margin-top">
-                  <p class="speech w3-green mg-40 w3-card-2" style="margin-left: 10px;">Hello &amp; Welcome</p>
-                  <p class="mg-40">
-                    <span style="font-size: x-large;">I'M
-                      <strong class="w3-text-green">NAVNEET PRAKASH</strong>
-                    </span> <br/>
-                      SOFTWARE ENGINEER <hr/>
-                    <strong class="mg-40">Age:</strong> 24
+  <div class="w3-card-4">
+    <div class="w3-row" id="siteHeader">
+      <div class="w3-col w3-card m4 l2" style="height:350px;">
+        <img src="img/dp.jpg" alt="Display Picture" style="width:100%;height:100%">
+      </div>
+      <div class="w3-col m8 l10">
+        <div class="w3-margin-top">
+          <p class="speech w3-green mg-40 w3-card-2" style="margin-left: 10px;">Hello &amp; Welcome</p>
+          <p class="mg-40">
+            <span style="font-size: x-large;">I'M
+              <strong class="w3-text-green">NAVNEET PRAKASH</strong>
+            </span> <br/>
+              SOFTWARE ENGINEER <hr/>
+            <strong class="mg-40">Age:</strong> 24
 
-      <!-- side nav that holds social sharing buttons -->
-      <aside ng-include="'components/sidenav.html'"></aside>
-                    
-                    <address class="mg-40">
-                      <strong> <i class="fa fa-map-marker w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small"> Address:</strong></span> WA-112, Gali No. 16, Shakarpur, Delhi-92, New Delhi
-                      <br/>
-                      <strong><i class="fa fa-mobile w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small" > Phone:</strong></span> +91-9527936489<br/>
-                      <strong> <i class="fa fa-envelope w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small"> Email:</strong></span> <span ng-copy="Message=true"> hello_navneet@hotmail.com</span> <span class="w3-tag w3-orange w3-margin-left" ng-show="Message"><em><strong>Email Copied</strong></em></span>
-                    </address>
-                  </p>
-                  <div class="w3-row">
-                    <div class="w3-col l10 mg-40">
-                      Let's be in touch  &nbsp;&nbsp;&nbsp;
-                      <ul class="socialicons">
-                        <li><a href="http://facebook.com/techraiders" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                        <li><a href="https://in.linkedin.com/in/techraiders" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                        <li><a href="https://github.com/techraiders" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> </li>
-                        <!-- <li class="disabled"><a href="#"><i class="fa fa-twitter" aria-hidden="true" target="_blank"></i></a></li> -->
-                        <li class="disabled"><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i> </a></li>
-                      </ul>
-                    </div>
-                  </div><!-- social icon row nested inside col beside dp -->
-                </div> <!-- dp details -->
-              </div> <!-- intro column beside dp -->
-            </div><!-- dp row -->
-          </div><!-- card -->
-        </section>
-
-        <script type="text/javascript">
-        
-        </script>
+                  <!-- side nav that holds social sharing buttons -->
+                  <aside ng-include="'components/sidenav.html'"></aside>
+            
+            <address class="mg-40">
+              <strong> <i class="fa fa-map-marker w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small"> Address: </span></strong> WA-112, Gali No. 16, Shakarpur, Delhi-92, New Delhi
+              <br/>
+              <strong><i class="fa fa-mobile w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small" > Phone:</span></strong> +91-9527936489<br/>
+              <strong> <i class="fa fa-envelope w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small"> Email:</span></strong> <span ng-copy="Message=true"> hello_navneet@hotmail.com</span> <span class="w3-tag w3-orange w3-margin-left" ng-show="Message"><em><strong>Email Copied</strong></em></span>
+            </address>
+          </p>
+          <div class="w3-row">
+            <div class="w3-col l5 mg-40">
+              Let's be in touch  &nbsp;&nbsp;&nbsp;
+              <ul class="socialicons">
+                <li><a href="http://facebook.com/techraiders" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                <li><a href="https://in.linkedin.com/in/techraiders" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                <li><a href="https://github.com/techraiders" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> </li>
+                <!-- <li class="disabled"><a href="#"><i class="fa fa-twitter" aria-hidden="true" target="_blank"></i></a></li> -->
+                <li class="disabled"><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i> </a></li>
+              </ul>
+            </div><!-- social icon col -->
+          </div><!-- social icon row nested inside col beside dp -->
+        </div> <!-- dp details -->
+      </div> <!-- intro column beside dp -->
+    </div><!-- dp row -->
+  </div><!-- card -->
+</section>
