--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,9 @@ ul.socialicons li a i:hover {
 }
 .fa-share-alt{
   background:#dd4b39;
+}
+.fa-download{
+  background:#dd4b39;
 } 
 .fa-envelope-o {
   background-color:#dd4b39;
