--- a/components/sidenav.html
+++ b/components/sidenav.html
@@ -11,9 +11,54 @@
         <!-- side nav sharing icons holder -->
       <nav class="w3-sidenav w3-animate-right w3-card-2" style="width:auto; height:auto;right:0;" id="socialshareiconsholder" ng-show="showsocialshareiconsholder">
         <a href="#" class="w3-closenav" ng-click="showsocialshareiconsholder=false">Close &times;</a>
-        <a href="#"><i class="fa fa-facebook w3-xlarge" w3-xlarge aria-hidden="true"></i></a>
-        <a href="#"><i class="fa fa-linkedin w3-xlarge" aria-hidden="true"></i></a>
-        <a href="#"><i class="fa fa-twitter w3-xlarge" aria-hidden="true" target="_blank"></i></a>
-        <a href="#"><i class="fa fa-google-plus w3-xlarge" aria-hidden="true"></i></a>
-        <a href="#"><i class="fa fa-envelope-o w3-xlarge" aria-hidden="true"></i></a>
+
+
+        <a href="#"
+          socialshare
+          socialshare-provider="linkedin"
+          socialshare-text="Hire the most Creative Software Engineer"
+          socialshare-hashtags="Navneet, techraiders"
+          socialshare-url="http://techraiders.github.io/portfolio">
+          <i class="fa fa-linkedin w3-xlarge" aria-hidden="true"></i>
+        </a>
+        <a href="#"
+          socialshare
+          socialshare-provider="facebook"
+          socialshare-text="Hire the most Creative Software Engineer"
+          socialshare-hashtags="Navneet, techraiders"
+          socialshare-url="http://techraiders.github.io/portfolio">
+          <i class="fa fa-facebook w3-xlarge" w3-xlarge aria-hidden="true"></i>
+        </a>
+        <a href="#"
+          socialshare
+          socialshare-provider="twitter"
+          socialshare-text="Hire the most Creative Software Engineer"
+          socialshare-hashtags="Navneet, techraiders"
+          socialshare-url="http://techraiders.github.io/portfolio">
+          <i class="fa fa-twitter w3-xlarge" aria-hidden="true" target="_blank"></i>
+        </a>
+        <a href="#"
+          socialshare
+          socialshare-provider="google"
+          socialshare-text="Hire the most Creative Software Engineer"
+          socialshare-hashtags="Navneet, techraiders"
+          socialshare-url="http://techraiders.github.io/portfolio">
+          <i class="fa fa-google-plus w3-xlarge" aria-hidden="true"></i>
+        </a>
+        <a href="#"
+          socialshare
+          socialshare-provider="skype"
+          socialshare-text="Hire the most Creative Software Engineer"
+          socialshare-hashtags="Navneet, techraiders"
+          socialshare-url="http://techraiders.github.io/portfolio">
+          <i class="fa fa-skype" aria-hidden="true"></i>
+        </a>
+        <a href="#"
+          socialshare
+          socialshare-provider="pinterest"
+          socialshare-text="Hire the most Creative Software Engineer"
+          socialshare-hashtags="Navneet, techraiders"
+          socialshare-url="http://techraiders.github.io/portfolio">
+          <i class="fa fa-pinterest-p" aria-hidden="true"></i>
+        </a>
       </nav>
