--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,12 @@ ul.socialicons li a i, .w3-sidenav a i, span i{
 .fa-google-plus {
     background:#dd4b39;
 }
+.fa-skype{
+  background:#00aff0;
+}
+.fa-pinterest-p{
+  background: #bd081c;
+}
 .fa-github{
   background: #222;
 }
@@ -51,7 +57,7 @@ ul.socialicons li a i:hover {
   background:#dd4b39;
 } 
 .fa-envelope-o {
-  background-color:#dd4b39;
+  background:#dd4b39;
 }
 
 footer{
