--- a/components/navbar.html
+++ b/components/navbar.html
@@ -5,7 +5,7 @@
     <li class="w3-hide-large w3-green w3-opennav w3-right">
       <a href="javascript:void(0);" onclick="myFunction()">☰</a>
     </li>
-    <li class="w3-navitem w3-padding-16">Portfolio <span class="w3-tag w3-round w3-red">Beta</span></li>
+    <li class="w3-navitem w3-padding-16">Portfolio <span class="w3-tag w3-round w3-red">Alpha</span></li>
     <li class="w3-hide-small w3-hide-medium"><a class="w3-padding-16" href="#">Home</a></li>
     <li class="w3-hide-small w3-hide-medium"><a class="w3-padding-16" href="#">Skills</a></li>
     <li class="w3-hide-small w3-hide-medium"><a class="w3-padding-16" href="#">Education</a></li>
