--- a/components/sidenav.html
+++ b/components/sidenav.html
@@ -1,7 +1,7 @@
 <!-- Share button at the right that opens sidenav of sharing icons -->
       <nav class="w3-sidenav w3-card-2 w3-hide-small w3-animate-right" style="width:auto;height:auto;right:0;" id="shareicon" ng-show="!showsocialshareiconsholder">
-        <a href=""  ng-click="showsocialshareiconsholder=true">
-          <i class="fa fa-share-alt" aria-hidden="true"></i>
+        <a href="">
+          <i class="fa fa-share-alt" aria-hidden="true" ng-mouseover="showsocialshareiconsholder=true"></i>
         </a>
         <a href="documents/resume.pdf" download="UI_DEVELOPER_RESUME.pdf">
           <i class="fa fa-download" aria-hidden="true"></i>
@@ -9,8 +9,8 @@
       </nav>
 
         <!-- side nav sharing icons holder -->
-      <nav class="w3-sidenav w3-animate-right w3-card-2" style="width:auto; height:auto;right:0;" id="socialshareiconsholder" ng-show="showsocialshareiconsholder">
-        <a href="#" class="w3-closenav" ng-click="showsocialshareiconsholder=false">Close &times;</a>
+      <nav class="w3-sidenav w3-animate-right w3-card-2" style="width:auto; height:auto;right:0;" id="socialshareiconsholder" ng-show="showsocialshareiconsholder" ng-mouseleave="showsocialshareiconsholder=false">
+        <!-- <a href="#" class="w3-closenav">Close &times;</a> -->
 
 
         <a href="#"
