Chrome browser specific css to fix bug in responsiveness of social connection icons

--- a/components/siteheader.html
+++ b/components/siteheader.html
@@ -24,18 +24,14 @@
               <strong> <i class="fa fa-envelope w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small"> Email:</span></strong> <span ng-copy="Message=true"> hello_navneet@hotmail.com</span> <span class="w3-tag w3-orange w3-margin-left" ng-show="Message"><em><strong>Email Copied</strong></em></span>
             </address>
           </p>
-          <div class="w3-row">
-            <div class="w3-col l5 mg-40">
-              Let's be in touch  &nbsp;&nbsp;&nbsp;
-              <ul class="socialicons">
-                <li><a href="http://facebook.com/techraiders" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                <li><a href="https://in.linkedin.com/in/techraiders" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                <li><a href="https://github.com/techraiders" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> </li>
-                <!-- <li class="disabled"><a href="#"><i class="fa fa-twitter" aria-hidden="true" target="_blank"></i></a></li> -->
-                <li class="disabled"><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i> </a></li>
-              </ul>
-            </div><!-- social icon col -->
-          </div><!-- social icon row nested inside col beside dp -->
+          <ul class="socialicons fmg-40">
+            <li><p style="margin-top: 5%;">Let's be in touch</p></li>  &nbsp;&nbsp;&nbsp;
+            <li><a href="http://facebook.com/techraiders" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+            <li><a href="https://in.linkedin.com/in/techraiders" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+            <li><a href="https://github.com/techraiders" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> </li>
+            <!-- <li class="disabled"><a href="#"><i class="fa fa-twitter" aria-hidden="true" target="_blank"></i></a></li> -->
+            <li class="disabled"><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i> </a></li>
+          </ul>
         </div> <!-- dp details -->
       </div> <!-- intro column beside dp -->
     </div><!-- dp row -->
