Animates slide show, data updates

--- a/components/experienceandservices.html
+++ b/components/experienceandservices.html
@@ -3,7 +3,7 @@
             <div class="w3-row-padding">
               <div class="w3-col l6" id="experience" ng-controller="experienceCtrl">
                 <header class="w3-green">
-                  <h3><i class="fa fa-briefcase" aria-hidden="true"></i> Work Experience</h3>
+                  <h3><i class="fa fa-briefcase" aria-hidden="true"></i> Internship Experience</h3>
                 </header>
                   <h5><a href="http://www.careertech.in/" target="_blank" style="text-decoration:none;"><i class="fa fa-building-o" aria-hidden="true"></i> CAREERTECH IT SOLUTIONS</a></h5> 
                   <!-- <h6 style="text-indent: 20px; font-size: .9em;"> -Mainly a Web Development / Designing Company</h6> -->
