--- a/components/skills.html
+++ b/components/skills.html
@@ -40,8 +40,6 @@
                   </div><!-- progress container --> <br/>
                 </div> <!-- repeater -->
               </div><!-- col -->
-              
-              <button onclick="document.getElementById('id01').style.display='block'" class="w3-btn">CLICK HERE FOR PIE CHART VIEW OF SKILLS</button><br/>
             </div><!-- ng-swith-when row -->
 
             <div class="w3-row" ng-switch-when="Table">
@@ -70,6 +68,8 @@
                 </table><!-- ng-switch-when -->
               </div><!-- col -->
             </div><!-- row -->
+
+              <button onclick="document.getElementById('id01').style.display='block'" class="w3-btn w3-blue w3-hover-white w3-right w3-margin">Show in Pie Chart</button><br/>
           </div><!-- ng-switch -->
 
             <div class="w3-row">
