--- a/components/skills.html
+++ b/components/skills.html
@@ -47,6 +47,7 @@
                 <table class="w3-table-all w3-striped w3-animate-right w3-hoverable w3-responsive"  id="skillsTable">
                   <thead>
                     <tr class="w3-green">
+                      <th>No.</th>
                       <th>Skill Name</th>
                       <th>Version</th>
                       <th colspan="2">Last Used</th>
@@ -59,6 +60,7 @@
                   </thead>
                   <tbody>
                     <tr ng-repeat="skill in skills">
+                      <td>{{$index+1}}</td>
                       <td>{{skill.name}}</td>
                       <td>{{skill.version}}</td>
                       <td style="width:50px;"> {{skill.last_used_month}} </td> <td> {{skill.last_used_year}} </td>
