--- a/components/siteheader.html
+++ b/components/siteheader.html
@@ -11,14 +11,15 @@
             <span style="font-size: x-large;">I'M
               <strong class="w3-text-green">NAVNEET PRAKASH</strong>
             </span> <br/>
-              SOFTWARE ENGINEER <hr/>
+              Frontend Developer at
+              <a href="http://www.nxtlifetechnologies.com/" style="text-decoration:none;">NxtLife Technologies Ltd. UK</a><hr/>
             <strong class="mg-40">Age:</strong> 24
 
                   <!-- side nav that holds social sharing buttons -->
                   <aside ng-include="'components/sidenav.html'"></aside>
             
             <address class="mg-40">
-              <strong> <i class="fa fa-map-marker w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small"> Address: </span></strong> WA-112, Gali No. 16, Shakarpur, Delhi-92, New Delhi-110092
+              <strong> <i class="fa fa-map-marker w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small"> Address: </span></strong>Nihal Vihar, Main Market, Delhi - 110041
               <br/>
               <strong><i class="fa fa-mobile w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small" > Phone:</span></strong> +91-9527936489<br/>
               <strong> <i class="fa fa-envelope w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small"> Email:</span></strong> <span ng-copy="Message=true"> hello_navneet@hotmail.com</span> <span class="w3-tag w3-orange w3-margin-left" ng-show="Message"><em><strong>Email Copied</strong></em></span>
