--- a/components/skills.html
+++ b/components/skills.html
@@ -44,6 +44,9 @@
 
             <div class="w3-row" ng-switch-when="Table">
               <div class="w3-col w3-responsive">
+                <div class="w3-margin">
+                  <form class="w3-center"><input type="search" ng-model="q" placeholder="Search Skill"></form>
+                </div>
                 <table class="w3-table-all w3-striped w3-animate-right w3-hoverable w3-responsive"  id="skillsTable">
                   <thead>
                     <tr class="w3-green">
@@ -59,8 +62,8 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr ng-repeat="skill in skills">
-                      <td>{{$index+1}}</td>
+                    <tr ng-repeat="skill in skills | filter: q">
+                      <td>{{$index+1 + "."}}</td>
                       <td>{{skill.name}}</td>
                       <td>{{skill.version}}</td>
                       <td style="width:50px;"> {{skill.last_used_month}} </td> <td> {{skill.last_used_year}} </td>
